# fast_marching

./: Mesh.ipynb  README.md  Voronoi_iterations_on_regular_poly.ipynb  mesh_djikstra.py  poly_10.off  poly_12.off  poly_14.off  poly_4.off  poly_6.off  poly_8.off  poly_boundary_10.txt  poly_boundary_12.txt  poly_boundary_14.txt  poly_boundary_4.txt  poly_boundary_6.txt  poly_boundary_8.txt  poly_connectivity_10.txt  poly_connectivity_12.txt  poly_connectivity_14.txt  poly_connectivity_4.txt  poly_connectivity_6.txt  poly_connectivity_8.txt  sandbox.py  utils.py
.ipynb_checkpoints/: Mesh-checkpoint.ipynb
Irregular/: Mesh_IrregularTrial.ipynb
Regular_Polygon_Irregular_mesh/: CMakeLists.txt  Triangulation_off_ostream_2.h  main.cpp  utils.cpp  utils.h
